# poc-Mario-physics

./: CMakeLists.txt  README.md  main.cpp
Animation/: Animation.cpp  Animation.h
Assets/Maps/: map.tmx  map2.tmx
Camera/: Camera.cpp  Camera.h
Characters/: Character.h  Warrior.cpp  Warrior.h
Collision/: CollisionHandler.cpp  CollisionHandler.h
Core/: Engine.cpp  Engine.h
Graphics/: TextureManager.cpp  TextureManager.h
Inputs/: Input.cpp  Input.h
Map/: GameMap.h  Layer.h  MapParser.cpp  MapParser.h  TileLayer.cpp  TileLayer.h
Object/: GameObject.h  IObject.h
Physics/: Collider.h  Point.h  RigidBody.h  Transform.h  Vector2D.h
Timer/: Timer.cpp  Timer.h
